<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="24dp">

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:contentDescription="@string/TODO2"
        android:src="@drawable/ic_profile"
        android:background="@drawable/bg_glass"
        android:padding="20dp"
        app:tint="@color/primary_light"/>

    <TextView
        android:id="@+id/tvName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textColor="@color/text_primary"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginTop="16dp"/>

    <TextView
        android:id="@+id/tvEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email_example_com"
        android:textColor="@color/text_secondary"
        android:textSize="16sp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="32dp"/>
    <TextView
        android:id="@+id/tvPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email_example_com"
        android:textColor="@color/text_secondary"
        android:textSize="16sp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="32dp"/>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnLogout"
        android:layout_width="243dp"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_button"
        android:text="@string/log_out"
        android:textColor="@color/text_primary"
        android:textSize="16sp" />

</LinearLayout>