<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gradient">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="460dp"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:orientation="vertical"
        android:padding="32dp"
        android:paddingTop="30dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:text="@string/welcome_title"
            android:textColor="@color/text_primary"
            android:textSize="29sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="48dp"
            android:text="@string/welcome_subtitle"
            android:textColor="@color/text_secondary"
            android:textSize="16sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnStart"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginTop="60dp"
            android:background="@drawable/bg_button"
            android:text="@string/get_started"
            android:textColor="@color/text_primary"
            android:textSize="16sp"
            android:textStyle="bold" />

    </LinearLayout>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="163dp"
        android:layout_marginTop="80dp"
        app:srcCompat="@mipmap/ic_launcher" />
</FrameLayout>